--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ __pycache__/
 .ipynb_checkpoints/
 
 # Data & Outputs (customize as needed)
-data_raw/
+data_raw/*
+!data_raw/input_imgs/
 !data_raw/input_imgs/**
 data/
 
